@@ -1,3 +1,9 @@
+2006-10-23  Walter Doerwald  <walter@livinglogic.de>
+
+	* IPython/Extensions/ipipe.py (ifile): Remove all methods that
+	call the base class method and propagate the return value to
+	ifile. This is now done by path itself.
+
 2006-10-15  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/ipapi.py (IPApi.__init__): Added new entry to public
